# databricks-ielts-speaking-demo

./: .gitignore  AGENTS.md  DATABRICKS_ML_PLATFORM_ENHANCEMENT_LOOP.md  LOOP.md  README.md  REAL_AUDIO_ASR_LOOP.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
app/: app.py  app.yaml  requirements.txt
docs/: architecture.md  databricks_capability_probe.md  demo_script.md  ielts-speaking-databricks-solution.pptx  known_limitations.md  loop_state.md  ml_platform_enhancement_state.md  real_audio_upgrade_state.md
notebooks/: 00_setup.sql  01_ingest_audio.py  01b_register_real_audio.py  01c_validate_audio.py  02_transcribe.py  03_extract_features.py  04_score_with_llm.py  05_review_results.py  06_log_mlflow_baseline.py  07_publish_feature_table.py  08_run_quality_checks.py  09_run_sql_ai_insights.py  10_score_with_model_serving.py
resources/: jobs.yml
sample_data/: mock_attempts.json  mock_transcripts.json  questions.json
scripts/: __init__.py  audit_demo_state.py  databricks_smoke.py  log_mlflow_baseline.py  probe_databricks.py  publish_feature_table.py  register_real_audio_attempt.py  run_mock_demo.py  run_quality_checks.py  run_real_audio_demo.py  run_sql_ai_insights.py  score_with_model_serving.py
sql/: setup_tables.sql
tests/: test_app_import.py  test_app_ui.py  test_audio_ingest.py  test_audio_preprocess.py  test_band_rounding.py  test_databricks_sql.py  test_delta_io.py  test_features.py  test_mock_asr.py  test_mock_scoring.py  test_model_serving.py  test_provider_provenance.py  test_real_audio_demo_guards.py  test_report_rendering.py  (+2 more)
(+17 files in other folders)
