[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-ielts"
version = "0.1.0"
description = "Databricks demo for IELTS Speaking audio scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
app = [
  "streamlit>=1.36",
  "databricks-sql-connector>=3.1",
  "databricks-sdk>=0.32",
]
databricks = [
  "databricks-sdk>=0.32",
]
asr = [
  "openai-whisper>=20250625",
]
platform = [
  "databricks-sdk>=0.32",
  "mlflow>=2.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
